# Simulator

./: .gitignore  .gitlab-ci.yml  .lfsconfig  CMakeLists.txt  LICENSE  README.md  SimulatorLaunch.sh  imgui.ini  run_all_tests  run_test  sonar-project.properties  spatzenhirn-spatzsim.desktop  speed_limits_ground.json
.github/workflows/: ci.yml
ansible/: ansible_ssh_key  deploy.yml  hosts
cmake/Modules/: FindGLFW.cmake
models/: 30.mtl  arrow.blend  arrow.blend1  arrow.mtl  barred_area_large.mtl  barred_area_medium.mtl  barred_area_small.mtl  barred_areas.blend  calib.mtl  crosswalk.blend  crosswalk.blend1  crosswalk.mtl  crosswalk_small.blend  crosswalk_small.blend1  crosswalk_small.mtl  dynamic_obstacle.blend  dynamic_obstacle.blend1  dynamic_obstacle.mtl  end.blend  end.blend1  end.mtl  giraffe.blend  giraffe.blend1  giraffe.mtl  give_way_line.blend1  give_way_line.mtl  ground.mtl  ground_10.mtl  ground_30.blend  ground_30.blend1  ground_60.mtl  ground_arrow_right.mtl  ground_speedlimits.blend1  island.blend  island.blend1  island.mtl  marker.blend  marker.blend1  marker.blend11  marker.mtl  (+52 more)
models/floorsigns/: barred_areas.blend1  give_way_line.blend  ground_20.mtl  ground_30.mtl  ground_arrows.blend  ground_speedlimits.blend  start_line.blend  start_line.mtl  stop_line.mtl
models/signs/: landmark_1.mtl  landmark_2.mtl  landmark_3.mtl  landmark_4.mtl  landmark_5.mtl  sign_collection.blend  sign_downhill.mtl  sign_expressway_end.mtl  sign_expressway_ende.mtl  sign_expressway_start.mtl  sign_forbidden.mtl  sign_giveway.mtl  sign_no_passing.mtl  sign_no_passing_end.mtl  sign_parking.mtl  sign_pedestrian_island.mtl  sign_right_of_way.mtl  sign_speedlimit_10_end.mtl  sign_speedlimit_10_start.mtl  sign_speedlimit_20_end.mtl  sign_speedlimit_20_start.mtl  sign_speedlimit_30_end.mtl  sign_speedlimit_30_start.mtl  sign_speedlimit_40_end.mtl  sign_speedlimit_40_start.mtl  sign_speedlimit_50_end.mtl  sign_speedlimit_50_start.mtl  sign_speedlimit_60_end.mtl  sign_speedlimit_60_start.mtl  sign_speedlimit_70_end.mtl  sign_speedlimit_70_start.mtl  sign_speedlimit_80_end.mtl  sign_speedlimit_80_start.mtl  sign_speedlimit_90_end.mtl  sign_speedlimit_90_start.mtl  sign_stop.mtl  sign_turn_left.mtl  sign_turn_right.mtl  sign_uphill.mtl  sign_zebra.mtl
python/: bindings.cpp  bindings_test_track.json  setup.py  test.py
shaders/: BayerFragmentShader.glsl  BayerVertexShader.glsl  DepthPointsFragmentShader.glsl  FragmentShader.glsl  ScreenQuadFragment.glsl  ScreenQuadLinearizeFragment.glsl  ScreenQuadVertex.glsl  VertexShader.glsl
src/: Loop.cpp  Loop.h  Marker.cpp  Marker.h  README.md  Scene.cpp  Scene.h  Storage.cpp  Storage.h  Store.cpp  Store.h  TODO.txt  main.cpp
src/helpers/: Camera.cpp  Camera.h  Capture.cpp  Capture.h  CinematicCamera.cpp  CinematicCamera.h  Clock.cpp  Clock.h  Dirent.h  FollowCamera.cpp  FollowCamera.h  FpsCamera.cpp  FpsCamera.h  FrameBuffer.cpp  FrameBuffer.h  Helpers.h  Id.cpp  Id.h  Input.cpp  Input.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  OrthoCamera.cpp  OrthoCamera.h  PointLight.cpp  PointLight.h  Pose.cpp  Pose.h  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Timer.cpp  Timer.h
src/imgui/: imgui_impl_glfw.cpp
src/modules/: AutoTracksModule.cpp  AutoTracksModule.h  CarModule.cpp  CarModule.h  CollisionModule.cpp  CollisionModule.h  CommModule.cpp  CommModule.h  Editor.cpp  Editor.h  GuiModule.cpp  GuiModule.h  ItemsModule.cpp  ItemsModule.h  MarkerModule.cpp  MarkerModule.h  RuleModule.cpp  RuleModule.h  Spatz.cpp  Spatz.h  SpatzSimulator.cpp  SpatzSimulator.h  VisModule.cpp  VisModule.h
src/scene/: Car.h  ModelStore.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Tracks.cpp  Tracks.h
src/sharedmem/: shmcomm.cpp  shmcomm.h
tests/: barred_area.json  barred_area_dynamic_obst.json  barred_area_gap.json  crosswalk_left_ped.json  crosswalk_multiple_ped.json  crosswalk_right_ped.json  give_way_line.json  give_way_line_obst.json  lane_following.json  obstacle_dynamic.json  obstacles.json  obstacles_left_right.json  obstacles_long.json  parking.json  parking_perpendicular.json  pedestrian_island.json  pedestrian_island_crosswalk.json  speed_limits.json  stop_line.json  stop_line_obst.json  turn_left.json  turn_left_giveway.json  turn_left_obst.json  turn_left_stop.json  turn_right.json  turn_right_giveway.json  turn_right_obst.json  turn_right_stop.json
